kubernetes/fluxcd/repositories/hello-flux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-flux
  namespace: default
spec:
  selector:
    matchLabels:
      app: hello-flux-app
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-flux-app
    spec:
      containers:
        - name: hello-flux-app
          image: mhussain78/hello-flux:0.0.9
          ports:
            - containerPort: 8080
