kubernetes/fluxcd/repositories/hello-flux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-flux-service
  namespace: default
spec:
  selector:
    app: hello-flux-app
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
